--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                     <div id="pipeline-toggle" class="right-sidebar-toggle col-4">
                         <label class="switch">
-                          <input id="pipeline-toggle-input" type="checkbox" checked>
+                          <input id="pipeline-toggle-input" type="checkbox">
                           <span class="slider round"></span>
                         </label>
                     </div>
@@ -85,7 +85,7 @@
                     </div>
                     <div id="facilities-toggle" class="right-sidebar-toggle col-4">
                         <label class="switch">
-                          <input id="facilities-toggle-input" type="checkbox" checked>
+                          <input id="facilities-toggle-input" type="checkbox">
                           <span class="slider round"></span>
                         </label>
                     </div>
@@ -97,7 +97,7 @@
                     </div>
                     <div id="well-label-toggle" class="right-sidebar-toggle col-4">
                         <label class="switch">
-                          <input id="well-label-toggle-input" type="checkbox" checked>
+                          <input id="well-label-toggle-input" type="checkbox">
                           <span class="slider round"></span>
                         </label>
                     </div>
