--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
         </div>
     </div>
 
+    <script src='./js/mapbox_setup.js'></script>
     <script src='./js/petroninja_ui.js'></script>
     <script src='./js/petroninja_wells.js'></script>
     <script src='./js/petroninja_charts.js'></script>
-
 
     <script>
 
